--- a/css/wall.css
+++ b/css/wall.css
@@ -147,7 +147,7 @@
     margin: 1.6rem 0 0 0;
     line-height: 110%;
     word-wrap: break-word;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .user-post p a {
